# config-cxx

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  Config_8h_source.html  Dockerfile  Doxyfile  ExternalLicenses.md  LICENSES.md  README.md  annotated.html  annotated_dup.js  classconfig_1_1Config-members.html  classconfig_1_1Config.html  classconfig_1_1Config.js  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fb6095525bd728fb59304481373b7090.html  dir_fb6095525bd728fb59304481373b7090_dep.map  dir_fb6095525bd728fb59304481373b7090_dep.md5  doxygen_crawl.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js
.github/workflows/: clang-format.yml  linux-clang-build.yml  linux-gxx-build.yml  macos-clang-build.yml  windows-mingw-build.yml
cmake/: cmake-coverage.cmake
docs/: header.html
docs/guides/: README.md  apple-clang-compilation-guide.md  apple_clang++_compilation_guide.md  clang++_compilation_guide.md  clang-compilation-guide.md  gcc-compilation-guide.md  msvc-compilation-guide.md
docs/wiki/: configuration-files.md  environment-variables.md
examples/project/: CMakeLists.txt  README.md
examples/project/config/: custom-environment-variables.json  default.json  development.json
examples/project/src/: Main.cpp
include/config-cxx/: Config.h  config.h
include/config-cxx/errors/: InvalidConfigError.h
scripts/: run-UT.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  pages_0.js  searchdata.js
src/: Config.cpp  ConfigDirectoryPathResolver.cpp  ConfigDirectoryPathResolver.h  ConfigDirectoryPathResolverTest.cpp  ConfigTest.cpp  ConfigValue.h  EnvironmentParser.cpp  EnvironmentParser.h  EnvironmentParserTest.cpp  EnvironmentSetter.cpp  EnvironmentSetter.h  EnvironmentSetterTest.cpp  JsonConfigLoader.cpp  JsonConfigLoader.h  JsonConfigLoaderTest.cpp  XmlConfigLoader.cpp  XmlConfigLoader.h  XmlConfigLoaderTest.cpp  YamlConfigLoader.cpp  YamlConfigLoader.h  YamlConfigLoaderTest.cpp  config.cpp  config_directory_path_resolver.cpp  config_directory_path_resolver.h  config_provider.cpp  config_provider.h  config_value.h  file_system_service.cpp  file_system_service.h  json_config_loader.cpp  xml_config_loader.cpp  yaml_config_loader.cpp  yaml_config_loader.h
src/environment/: ConfigProvider.cpp  ConfigProvider.h  EnvironmentParser.cpp  EnvironmentParser.h  EnvironmentParserTest.cpp  EnvironmentSetter.cpp  EnvironmentSetter.h  EnvironmentSetterTest.cpp
src/filesystem/: ExecutableFinder.cpp  ExecutableFinder.h  ExecutableFinderTest.cpp  FileSystemService.cpp  FileSystemService.h  FileSystemServiceTest.cpp
src/filesystem/errors/: FileNotFound.h
src/tests/: EnvironmentSetter.cpp  EnvironmentSetterTest.cpp  ProjectRootFinder.cpp  ProjectRootFinder.h  ProjectRootFinderTest.cpp
tests/: CMakeLists.txt  config_directory_path_resolver_test.cpp  config_provider_test.cpp  config_test.cpp  environment_setter.cpp  environment_setter.h  environment_setter_test.cpp  file_system_service_executable_test.cpp  file_system_service_test.cpp  json_config_loader_test.cpp  xml_config_loader_test.cpp  yaml_config_loader_test.cpp
